test/tests/stages/8_loops/valid/null_for_header.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  for
  (
  ;
  ;
  )
  {
  identifier(a)
  =
  identifier(a)
  +
  const int(1)
  ;
  if
  (
  identifier(a)
  >
  const int(3)
  )
  break
  ;
  }
  return
  identifier(a)
  ;
  }
