test/tests/stages/8_loops/invalid_semantics/continue_not_in_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  {
  int
  identifier(a)
  ;
  continue
  ;
  }
  return
  const int(0)
  ;
  }
